--- a/client/src/styling/global.css
+++ b/client/src/styling/global.css
@@ -108,3 +108,22 @@
   left: 0;
   content: "";
 }
+
+::-webkit-scrollbar {
+  border-radius: 10px;
+  background-color: transparent;
+  width: 10px;
+  height: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #888;
+  width: 10px;
+  height: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+  cursor: pointer !important;
+}
